# otterbrix

./: CMakeLists.txt
components/: CMakeLists.txt
components/index/: CMakeLists.txt  index.cpp  index.hpp  vector_index.cpp  vector_index.hpp
components/index/test/: CMakeLists.txt  test_vector_index.cpp
components/logical_plan/: CMakeLists.txt  forward.cpp  forward.hpp  node_create_index.cpp  node_create_index.hpp  node_vector_search.cpp  node_vector_search.hpp
components/physical_plan/: CMakeLists.txt
components/physical_plan/operators/: operator.hpp  operator_vector_search.cpp  operator_vector_search.hpp
components/physical_plan/operators/scan/: full_scan.cpp
components/physical_plan_generator/: CMakeLists.txt  create_plan.cpp
components/physical_plan_generator/impl/: create_plan_vector_search.cpp
components/sql/test/: test_select.cpp
components/sql/transformer/impl/: transform_select.cpp
components/vector_search/: CMakeLists.txt  distance_metrics.hpp  hnsw_index.cpp  hnsw_index.hpp  knn_search.hpp  top_k_heap.hpp
components/vector_search/benchmark/: CMakeLists.txt  vector_search_benchmark.cpp  vector_search_custom_bench.cpp
components/vector_search/test/: CMakeLists.txt  test_distance_metrics.cpp  test_hnsw_index.cpp
docker/: Dockerfile-build-check
integration/cpp/: wrapper_dispatcher.cpp  wrapper_dispatcher.hpp
integration/cpp/test/: CMakeLists.txt  bench_vector_search.cpp  test_vector_search.cpp
services/collection/: executor.cpp
